minor fix spacing profile icon screen

--- a/src/app/modules/project/add/main/wizard/wizardPages/default/project-icon/project-icon.component.scss
+++ b/src/app/modules/project/add/main/wizard/wizardPages/default/project-icon/project-icon.component.scss
@@ -28,6 +28,7 @@
   .project-icon-picker {
     height: 300px;
     min-width: 300px;
+    margin-bottom: 20px;
   }
 
   .right {
